force-app/main/default/objects/Opportunity/fields/FNS_ApplicationExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ApplicationExtId__c</fullName>
    <externalId>true</externalId>
    <label>CME Application ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>