force-app/main/default/objects/Opportunity/fields/FNS_Bank__c.field-meta.xml
<CustomField>
    <fullName>FNS_Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>FNS_Bank__c</referenceTo>
    <relationshipLabel>Application</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>