force-app/main/default/objects/Opportunity/fields/FNS_BypassValidation__c.field-meta.xml
<CustomField>
    <fullName>FNS_BypassValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation</label>
    <type>Checkbox</type>
    
</CustomField>