force-app/main/default/objects/Opportunity/fields/FNS_Contact__c.field-meta.xml
<CustomField>
    <fullName>FNS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application (Contact)</relationshipLabel>
    <relationshipName>Application</relationshipName>
    <type>Lookup</type>
</CustomField>