force-app/main/default/objects/Opportunity/fields/FNS_Fees__c.field-meta.xml
<CustomField>
    <fullName>FNS_Fees__c</fullName>
    <label>Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>