force-app/main/default/objects/Opportunity/fields/FNS_LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>FNS_LoanAmount__c</fullName>
    <description>Loan Amount</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>