force-app/main/default/objects/Opportunity/fields/FNS_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_PhoneNumber__c</fullName>
    <formula>FNS_Contact__r.Phone</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>