force-app/main/default/objects/Opportunity/fields/FNS_Quip__c.field-meta.xml
<CustomField>
    <fullName>FNS_Quip__c</fullName>
    <description>Quip Link</description>
    <label>QUIP</label>
    <type>Url</type>
</CustomField>