force-app/main/default/objects/Opportunity/fields/FNS_QuipFinalized__c.field-meta.xml
<CustomField>
    <fullName>FNS_QuipFinalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quip Finalized</label>
    <type>Checkbox</type>
</CustomField>