force-app/main/default/objects/Opportunity/fields/FNS_SLA__c.field-meta.xml
<CustomField>
    <fullName>FNS_SLA__c</fullName>
    <formula>IF( ISPICKVAL(FNS_SLAStatus__c , &#39;YELLOW&#39;) , IMAGE(&quot;/resource/FNS_OrangeStatus&quot;,&quot;YELLOW&quot;, 15, 75) ,
IF( ISPICKVAL(FNS_SLAStatus__c , &#39;GREEN&#39;) , IMAGE(&quot;/resource/FNS_GreenStatus&quot;,&quot;GREEN&quot;, 15, 75),
IF( ISPICKVAL(FNS_SLAStatus__c , &#39;RED&#39;) , IMAGE(&quot;/resource/FNS_RedStatus&quot;, &quot;RED&quot;, 15, 75),  NULL
)))</formula>
    <label>SLA</label>
    <type>Text</type>
</CustomField>