force-app/main/default/objects/Opportunity/fields/FNS_SLAStatus__c.field-meta.xml
<CustomField>
    <fullName>FNS_SLAStatus__c</fullName>
    <label>SLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>YELLOW</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Full</fullName>
                <isActive>false</isActive>
            </value>
            <value>
                <fullName>Partial</fullName>
                <isActive>false</isActive>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>