force-app/main/default/objects/Opportunity/fields/FNS_StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>FNS_StartDateTime__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>