force-app/main/default/objects/Opportunity/fields/FNS_TotalRequestedAmount__c.field-meta.xml
<CustomField>
    <fullName>FNS_TotalRequestedAmount__c</fullName>
    <label>Total Requested Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>