force-app/main/default/objects/Opportunity/recordTypes/FNS_Application.recordType-meta.xml
<RecordType>
    <fullName>FNS_Application</fullName>
    <active>true</active>
    <businessProcess>FNS_ApplicationProcess</businessProcess>
    <description>Application Record Type</description>
    <label>Application</label>
</RecordType>