force-app/main/default/objects/Opportunity/recordTypes/FNS_ApplicationReadOnly.recordType-meta.xml
<RecordType>
    <fullName>FNS_ApplicationReadOnly</fullName>
    <active>true</active>
    <businessProcess>FNS_ApplicationProcess</businessProcess>
    <label>Application Read Only</label>
</RecordType>