force-app/main/default/objects/Opportunity/listViews/FNS_Application.listView-meta.xml
<ListView>
    <fullName>FNS_Application</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Applications</label>
</ListView>